# IDS721

./: README.md
Project_2/: Dockerfile  app.py  requirements.txt
Project_3/: README  README.md  app.py  song-recommendation.ipynb
Project_4/: README.md
week10/app/: .gitignore  Cargo.toml  README.md
week10/app/src/: main.rs
week11/: README.md
week11/app/: Cargo.toml
week11/app/src/: main.rs
week5_miniproj/: README.md
week5_miniproj/remnder/: Cargo.toml
week5_miniproj/remnder/src/: main.rs
week6_miniproj/: .gitignore  README.md
week6_miniproj/holidayapp/: Cargo.toml
week6_miniproj/holidayapp/src/: main.rs
week7/: README.md
week7/tictactoe/src/: main.rs
week8/: .gitignore
week8/game/: .gitignore  test.txt
week8/game/src/: main.rs
week9/app/: Cargo.toml
week9/app/src/: main.rs
