[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
spotify-web-api = "0.17.0"
